
Fri Nov 15 16:46:08 CET 2002

	- Synced preproc.y with gram.y.


Wed Nov 27 09:28:54 CET 2002

	- Synced preproc.y with gram.y.

Tue Jan 21 20:50:58 CET 2003

	- Set ecpg version to 2.11.0.
	- Synced preproc.y with gram.y.

Thu Feb 13 14:06:28 CET 2003

	- Applied patch by Matthew Vanecek <mevanecek@yahoo.com> for better
	  error reporting.
	- Started working on an Informix compatibility mode. With option "-C
	  INFORMIX" set, ecpg now accepts "$" as alias for "exec sql" and to
	  denote variables inside SQL statements.


Fri Feb 14 14:14:25 CET 2003

	- Synced parser and keyword file.
	- More work on Informix compatibility. 

Mon Feb 17 15:07:41 CET 2003

	- Added Informix "database" command.

Wed Feb 19 13:39:29 CET 2003

	- Added DATABASE command as alias to CONNECT TO.
	- Fixed struct parsing bug.

Tue Feb 25 16:46:27 CET 2003

	- Allow SET CONNECTION to be followed by connection object without
	  leading "TO" or "=".
	- Allow whenever statement to list function without parameters.


Sun Mar 16 11:28:01 CET 2003
	
	- Started with a pgtypes library.
	- Renamed lib directory to ecpglib.
	- Added numerical functions to library and preprocessor.

Thu Mar 20 16:53:40 CET 2003

	- Added date/timestamp to library and preprocessor.

Fri Mar 21 15:13:42 CET 2003

	- Made sure preprocessor accepts new datatypes.
	- Do not free prepared statements at the end of a transaction.


Thu Mar 27 15:23:58 CET 2003

	- Some more updates to pgtypeslib.
	- Set optimization to -O1 until I find the reason why code is broken
	  with -O2.

Sat Mar 29 22:03:16 CET 2003

	- Moved Informix compatibility stuff its own library.
	- Added interval datetypes.

Sun Mar 30 13:43:13 CEST 2003

	- Interval datetype now fully functional.

Tue Apr  8 14:03:32 CEST 2003

	- Added rstrdate function.
	- Made Informix mode honor environment variable to set dbname to
	  connect to.
	- Set ecpg version to 2.12.0.
	- Set ecpg library to 3.4.2.
	- Set pgtypes library to 1.0.0
	- Set compat library to 1.0.0
